--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <ClCompile Include="src\main\Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\global\Shorts.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
