--- a/MazeGame/MazeGame.vcxproj.filters
+++ b/MazeGame/MazeGame.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="src\main\Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\global\Shorts.h" />
+  </ItemGroup>
 </Project>
