--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -132,9 +132,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main\Main.cpp" />
+    <ClCompile Include="src\render\RenderMain.cpp" />
+    <ClCompile Include="src\render\ShaderGen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\global\Shorts.h" />
+    <ClInclude Include="src\render\RenderMain.h" />
+    <ClInclude Include="src\render\ShaderGen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
