--- a/MazeGame/MazeGame.vcxproj.filters
+++ b/MazeGame/MazeGame.vcxproj.filters
@@ -2,8 +2,12 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="src\main\Main.cpp" />
+    <ClCompile Include="src\render\ShaderGen.cpp" />
+    <ClCompile Include="src\render\RenderMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\global\Shorts.h" />
+    <ClInclude Include="src\render\ShaderGen.h" />
+    <ClInclude Include="src\render\RenderMain.h" />
   </ItemGroup>
 </Project>
