Introduce poly rendering

--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -131,11 +131,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\core\Poly.cpp" />
     <ClCompile Include="src\main\Main.cpp" />
     <ClCompile Include="src\render\RenderMain.cpp" />
     <ClCompile Include="src\render\ShaderGen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\core\Poly.h" />
+    <ClInclude Include="src\global\DataTypes.h" />
     <ClInclude Include="src\global\Shorts.h" />
     <ClInclude Include="src\render\RenderMain.h" />
     <ClInclude Include="src\render\ShaderGen.h" />
