Add system architecture

--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\core\FrameCounter.cpp" />
     <ClCompile Include="src\core\GameMain.cpp" />
     <ClCompile Include="src\core\Poly.cpp" />
     <ClCompile Include="src\main\Main.cpp" />
@@ -138,9 +139,11 @@
     <ClCompile Include="src\render\ShaderGen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\core\FrameCounter.h" />
     <ClInclude Include="src\core\GameMain.h" />
     <ClInclude Include="src\core\Poly.h" />
-    <ClInclude Include="src\global\DataTypes.h" />
+    <ClInclude Include="src\core\System.h" />
+    <ClInclude Include="src\global\Shapes.h" />
     <ClInclude Include="src\global\Shorts.h" />
     <ClInclude Include="src\render\RenderMain.h" />
     <ClInclude Include="src\render\ShaderGen.h" />
