Add MazeGame class

--- a/MazeGame/MazeGame.vcxproj.filters
+++ b/MazeGame/MazeGame.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="src\render\RenderMain.cpp" />
     <ClCompile Include="src\core\GameMain.cpp" />
     <ClCompile Include="src\core\FrameCounter.cpp" />
+    <ClCompile Include="src\game\MazeGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\global\Shorts.h" />
@@ -17,5 +18,6 @@
     <ClInclude Include="src\global\Shapes.h" />
     <ClInclude Include="src\core\System.h" />
     <ClInclude Include="src\core\FrameCounter.h" />
+    <ClInclude Include="src\game\MazeGame.h" />
   </ItemGroup>
 </Project>
