--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="src\core\FrameCounter.cpp" />
     <ClCompile Include="src\core\GameMain.cpp" />
     <ClCompile Include="src\core\Poly.cpp" />
+    <ClCompile Include="src\game\MazeGame.cpp" />
     <ClCompile Include="src\main\Main.cpp" />
     <ClCompile Include="src\render\RenderMain.cpp" />
     <ClCompile Include="src\render\ShaderGen.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="src\core\GameMain.h" />
     <ClInclude Include="src\core\Poly.h" />
     <ClInclude Include="src\core\System.h" />
+    <ClInclude Include="src\game\MazeGame.h" />
     <ClInclude Include="src\global\Shapes.h" />
     <ClInclude Include="src\global\Shorts.h" />
     <ClInclude Include="src\render\RenderMain.h" />
