Add outline for textured rendering

--- a/MazeGame/MazeGame.vcxproj.filters
+++ b/MazeGame/MazeGame.vcxproj.filters
@@ -2,23 +2,30 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="src\main\Main.cpp" />
-    <ClCompile Include="src\core\Poly.cpp" />
     <ClCompile Include="src\render\ShaderGen.cpp" />
-    <ClCompile Include="src\render\RenderMain.cpp" />
     <ClCompile Include="src\core\GameMain.cpp" />
     <ClCompile Include="src\core\FrameCounter.cpp" />
     <ClCompile Include="src\game\MazeGame.cpp" />
     <ClCompile Include="src\core\System.cpp" />
+    <ClCompile Include="src\render\Vao.cpp" />
+    <ClCompile Include="src\render\Renderer.cpp" />
+    <ClCompile Include="src\render\Window.cpp" />
+    <ClCompile Include="src\stb_image\stb_image.cpp" />
+    <ClCompile Include="src\render\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\global\Shorts.h" />
-    <ClInclude Include="src\core\Poly.h" />
     <ClInclude Include="src\render\ShaderGen.h" />
-    <ClInclude Include="src\render\RenderMain.h" />
     <ClInclude Include="src\core\GameMain.h" />
-    <ClInclude Include="src\global\Shapes.h" />
     <ClInclude Include="src\core\System.h" />
     <ClInclude Include="src\core\FrameCounter.h" />
     <ClInclude Include="src\game\MazeGame.h" />
+    <ClInclude Include="src\render\Vao.h" />
+    <ClInclude Include="src\render\Renderer.h" />
+    <ClInclude Include="src\render\Window.h" />
+    <ClInclude Include="src\render\ra.h" />
+    <ClInclude Include="src\stb_image\stb_image.h" />
+    <ClInclude Include="src\render\Texture.h" />
+    <ClInclude Include="src\render\Model.h" />
   </ItemGroup>
 </Project>
