--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="src\core\GameMain.cpp" />
     <ClCompile Include="src\core\System.cpp" />
     <ClCompile Include="src\game\MazeGame.cpp" />
+    <ClCompile Include="src\global\Matrix.cpp" />
     <ClCompile Include="src\main\Main.cpp" />
     <ClCompile Include="src\render\Renderer.cpp" />
     <ClCompile Include="src\render\Texture.cpp" />
@@ -150,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="src\core\FrameCounter.h" />
     <ClInclude Include="src\core\GameMain.h" />
+    <ClInclude Include="src\global\Matrix.h" />
     <ClInclude Include="src\render\Model.h" />
     <ClInclude Include="src\core\System.h" />
     <ClInclude Include="src\game\MazeGame.h" />
