--- a/MazeGame/MazeGame.vcxproj
+++ b/MazeGame/MazeGame.vcxproj
@@ -137,8 +137,13 @@
   <ItemGroup>
     <ClCompile Include="src\core\FrameCounter.cpp" />
     <ClCompile Include="src\core\GameMain.cpp" />
+    <ClCompile Include="src\core\input.cpp" />
     <ClCompile Include="src\core\System.cpp" />
+    <ClCompile Include="src\game\GameWorld.cpp" />
     <ClCompile Include="src\game\MazeGame.cpp" />
+    <ClCompile Include="src\game\Player.cpp" />
+    <ClCompile Include="src\game\Sprite.cpp" />
+    <ClCompile Include="src\game\WorldObject.cpp" />
     <ClCompile Include="src\global\Matrix.cpp" />
     <ClCompile Include="src\main\Main.cpp" />
     <ClCompile Include="src\render\Renderer.cpp" />
@@ -151,6 +156,11 @@
   <ItemGroup>
     <ClInclude Include="src\core\FrameCounter.h" />
     <ClInclude Include="src\core\GameMain.h" />
+    <ClInclude Include="src\core\input.h" />
+    <ClInclude Include="src\game\GameWorld.h" />
+    <ClInclude Include="src\game\Player.h" />
+    <ClInclude Include="src\game\Sprite.h" />
+    <ClInclude Include="src\game\WorldObject.h" />
     <ClInclude Include="src\global\Matrix.h" />
     <ClInclude Include="src\render\Model.h" />
     <ClInclude Include="src\core\System.h" />
