--- a/MazeGame/MazeGame.vcxproj.filters
+++ b/MazeGame/MazeGame.vcxproj.filters
@@ -13,6 +13,11 @@
     <ClCompile Include="src\stb_image\stb_image.cpp" />
     <ClCompile Include="src\render\Texture.cpp" />
     <ClCompile Include="src\global\Matrix.cpp" />
+    <ClCompile Include="src\game\Sprite.cpp" />
+    <ClCompile Include="src\game\WorldObject.cpp" />
+    <ClCompile Include="src\game\GameWorld.cpp" />
+    <ClCompile Include="src\core\input.cpp" />
+    <ClCompile Include="src\game\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\global\Shorts.h" />
@@ -29,5 +34,10 @@
     <ClInclude Include="src\render\Texture.h" />
     <ClInclude Include="src\render\Model.h" />
     <ClInclude Include="src\global\Matrix.h" />
+    <ClInclude Include="src\game\Sprite.h" />
+    <ClInclude Include="src\game\GameWorld.h" />
+    <ClInclude Include="src\game\WorldObject.h" />
+    <ClInclude Include="src\core\input.h" />
+    <ClInclude Include="src\game\Player.h" />
   </ItemGroup>
 </Project>
